tests/e2e/macros/procedural/custom/v2/snapshots/e2e__macros__procedural__custom__v2__inline_simple_module_level_v2.snap
---
source: tests/e2e/macros/procedural/custom/v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2025_12\"\n\n[dependencies]\ncairols_test_macros_v2 = { path = \"/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\nmod fu {\n    simple_module_level_inline_macro_v2!();\n}\nfn main() {\n    fu::foo();\n}"
expression: report
---
[[expansions]]
analyzed_lines = """
    simple_module_level_inline_macro_v2!()<caret>;
"""
generated_code = """
pub fn foo() -> felt252 {
    123
}
"""
