tests/e2e/macros/procedural/custom/v2/snapshots/e2e__macros__procedural__custom__v2__inline_simple_v2_with_user_error.snap
---
source: tests/e2e/macros/procedural/custom/v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2025_12\"\n\n[dependencies]\ncairols_test_macros_v2 = { path = \"/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\nfn foo() {\n    let _x = simple_inline_macro_v2!(10_u8 + 5_felt252);\n}"
expression: report
---
[[expansions]]
analyzed_lines = """
    let _x = simple<caret>_inline_macro_v2!(10_u8 + 5_felt252);
    let _x = simple_inline_macro_v2!(10_u8 +<caret> 5_felt252);
"""
generated_code = """
(10_u8 + 5_felt252)
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: 5_felt252
    diagnostic:
      range:
        start:
          line: 1
          character: 45
        end:
          line: 1
          character: 54
      severity: 1
      code: E2041
      message: 'Unexpected argument type. Expected: "u8", found: "felt252".'
      relatedInformation:
      - location:
          uri: vfs://inline_proc_macro.cairo
          range:
            start:
              line: 0
              character: 9
            end:
              line: 0
              character: 18
        message: Diagnostic mapped from here.
