tests/e2e/macros/procedural/custom/v2/snapshots/e2e__macros__procedural__custom__v2__inline_with_location_error_v2.snap
---
source: tests/e2e/macros/procedural/custom/v2/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2024_07\"\n\n[dependencies]\ncairols_test_macros_v2 = { path = \"/scarb_procedural_macros_v2\" }\n\n// → test_package/src/lib.cairo\nfn foo() {\n    error_inline_with_location_macro_v2!(10 + 10);\n}"
expression: report
---
[[expansions]]
analyzed_lines = """
    error<caret>_inline_with_location_macro_v2!(10 + 10);
    error_inline_with_location_macro_v2!(10 +<caret> 10);
"""
generated_code = """
No expansion information.
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: (
    diagnostic:
      range:
        start:
          line: 1
          character: 40
        end:
          line: 1
          character: 41
      severity: 1
      message: 'Plugin diagnostic: Error from procedural macro'
